# Spaceflight-simulator

./: .gitignore  CMakeLists.txt  DockerfileBuildEnv  Makefile  README.md  main.cpp  main_for_tests.cpp
.github/workflows/: action.yml
core/places/: LaunchPad.h  MissionControl.h  Shed.h
core/planet/: Atmosphere.h  AtmosphereLayer.h  Planet.h
core/rocket/: Engine.h  FuelTank.h  MountSide.h  Rocket.h  RocketComponent.h  RocketStage.h
core/rocket/engine/: Engine.h  EngineBuilder.h  EngineDirector.h  EngineInfoProvider.h  IEngineBuilder.h
core/rocket/fuelTank/: FuelTank.h  FuelTankBuilder.h  FuelTankDirector.h  FuelTankInfoProvider.h  IFuelTankBuilder.h
core/rocket/rocketStage/: RocketStage.h  RocketStageBuilder.h
documentation/: Documentation.docx
documentation/outputDataExample/: rocketTelemetry_live.txt
pages/: ConsoleWriter.h
physics/: ConversionsSI.h  Physics.h
tests/: CMakeLists.txt  simpleTest.cpp
tools/: ConversionsSI.h  Physics.h
utils/: DataReader.h  PlotMaker.h
utils/pbPlots/: pbPlots.cpp
